Fix layout of side menu on Safari.

--- a/src/application/files/components/__path@dasherize__/containers/layout/layout.container.scss
+++ b/src/application/files/components/__path@dasherize__/containers/layout/layout.container.scss
@@ -1,10 +1,14 @@
-div.layout-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+:host {
+  flex-direction: column;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 auto;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
 
+div.layout-container {
   mat-sidenav-container {
     flex: 1;
 
